# Zametek.Maths.Graphs

./: .editorconfig  .gitattributes  .gitignore  LICENSE  README.md  Zametek.Maths.Graphs.Compilers.sln  Zametek.Maths.Graphs.sln  Zametek.Maths.Graphs.slnx
.claude/: settings.local.json
Zametek.Maths.Graphs.Compilers.Tests/: KeyExtensionsTests.cs  VertexGraphCompilerTests.cs  Zametek.Maths.Graphs.Compilers.Tests.csproj  (+1 more)
rust/: Cargo.toml  README.md
rust/compilers/: Cargo.toml
rust/compilers/examples/: basic.rs  sample_project.rs
rust/compilers/src/: ancestor.rs  constraint_checker.rs  contracts.rs  error_formatter.rs  generators.rs  id_gen.rs  insertion_order_map.rs  lib.rs  messages.rs  shuffle.rs  tarjan.rs
rust/compilers/src/arrow/: builder.rs  compiler.rs  cpm.rs  engines.rs  mod.rs  orchestrator.rs  reducer.rs  state.rs
rust/compilers/src/engine_tests/: common.rs  cpm_engine.rs  dummy_edge_orchestrator.rs  error_formatter.rs  generators.rs  mod.rs  tarjan_scc.rs  transitive_reducer.rs
rust/compilers/src/scheduling/: mod.rs  schedule_builder.rs  scheduler.rs
rust/compilers/src/vertex/: builder.rs  compiler.rs  cpm.rs  engines.rs  mod.rs  reducer.rs  state.rs
rust/compilers/tests/: arrow_builder_critical_path_tests.rs  arrow_builder_tests.rs  arrow_compiler_tests.rs  compile_behaviour_tests.rs  deep_graph_tests.rs  dependency_resolution_tests.rs  engine_injection_tests.rs  priority_list_resource_scheduler_tests.rs  resource_schedule_builder_tests.rs  vertex_builder_clone_tests.rs  vertex_builder_critical_path_tests.rs  vertex_builder_tests.rs  vertex_compiler_tests.rs
rust/primitives/: Cargo.toml
rust/primitives/src/: activity.rs  compilation.rs  edge.rs  enums.rs  error.rs  event.rs  graph.rs  key.rs  lib.rs  node.rs  resource.rs  schedule.rs  work_stream.rs
rust/primitives/tests/: activity_tests.rs  circular_dependency_tests.rs  dependent_activity_tests.rs  edge_tests.rs  entity_tests.rs  event_tests.rs  graph_tests.rs  key_tests.rs  node_tests.rs  resource_schedule_tests.rs  resource_tests.rs  scheduled_activity_tests.rs  work_stream_tests.rs
(+272 files in other folders)
