[package]
name = "zametek-maths-graphs-primitives"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Domain primitives for project-planning graphs (Critical Path Method): activities, events, edges, nodes, resources and schedules. Rust port of Zametek.Maths.Graphs.Primitives."

[dependencies]
indexmap = { workspace = true }
